[package]
name = "clearwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
fern = "0.6.2"
log = "0.4.20"

[dependencies.x11rb]
version = "0.13.0"
features = ["allow-unsafe-code", "render"]

[dependencies.cairo-rs]
version = "0.19.2"
features = ["xcb"]